--- a/app/src/main/res/layout/documentview_item.xml
+++ b/app/src/main/res/layout/documentview_item.xml
@@ -15,7 +15,8 @@
         android:layout_rowWeight="1"
         android:layout_columnWeight="3"
         android:textSize="20dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@color/colorGray"/>
 
 
     <Button
