--- a/app/src/main/res/layout/projectview_item.xml
+++ b/app/src/main/res/layout/projectview_item.xml
@@ -38,7 +38,6 @@
 
     <!-- Surface View Start -->
     <LinearLayout
-        android:padding="10dp"
         android:background="#ffffff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -46,36 +45,27 @@
         <!--What you want to show in SurfaceView-->
 
         <android.support.v7.widget.CardView
-
             android:layout_width="match_parent"
-
-            android:layout_height="wrap_content"
-
-            android:layout_margin="@dimen/card_margin"
-
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
             app:cardBackgroundColor="#00FFFFFF">
 
 
 
         <LinearLayout
-
             style="@style/Widget.CardContent"
-
             android:layout_width="match_parent"
-
             android:layout_height="wrap_content"
-
             android:background="@drawable/cardview_border">
+
             <TextView
                 android:id="@+id/projectName"
                 android:layout_width="match_parent"
-
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:layout_gravity="start"
-                android:layout_rowSpan="2"
                 android:layout_rowWeight="1"
-                android:textSize="20dp"
+                android:textSize="15dp"
                 android:textStyle="bold"
                 android:textColor="@color/colorLogo"/>
 
