--- a/app/src/main/res/layout/workview_item.xml
+++ b/app/src/main/res/layout/workview_item.xml
@@ -14,7 +14,8 @@
         android:layout_rowWeight="1"
         android:layout_columnWeight="3"
         android:textSize="20dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@color/colorLogo"/>
 
 
     <Button
@@ -63,7 +64,8 @@
         android:layout_gravity="center_vertical"
         android:layout_rowWeight="1"
         android:layout_columnWeight="3"
-        android:textSize="15dp" />
+        android:textSize="15dp"
+        android:textColor="@color/colorGray"/>
 
     <Button
         android:layout_width="15dp"
@@ -99,7 +101,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|left"
-            android:layout_columnWeight="1"/>
+            android:layout_columnWeight="1"
+            android:textColor="@color/colorGray"/>
 
     </GridLayout>
 
